crates/ruff_python_formatter/src/snapshots/ruff_python_formatter__tests__black_test__beginning_backslash_py.snap
---
source: crates/ruff_python_formatter/src/lib.rs
expression: snapshot
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/simple_cases/beginning_backslash.py
---
## Input

```py
\





print("hello, world")
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1 +1,2 @@
 print("hello, world")
+
```

## Ruff Output

```py
print("hello, world")

```

## Black Output

```py
print("hello, world")
```


